<resources>
    <string name="app_name">TruckVanCarGo</string>
    <string name="congratulation">Congratulations</string>
    <string name="server_error">Network establishment failed.</string>
    <string name="network_error">No internet connection, please connect your phone to wifi or data connection.</string>
    <string name="check_connection">Unable to make a connection with remote server. Either please check your internet connection or try after some time.</string>
    <string name="notificationid_validation">We are not getting Device Notification Id. Either please check your internet connection or try again.</string>
    <string name="url_missing">Whoops! Url is missing. Please check your internet connection then try again.</string>
    <string name="unknown_success">Whoops! unknown success parameter.</string>
    <string name="user_info_missing">Whoops! User info is missing. Please exit app then try again.</string>
    <string name="email_client_error">There are no email clients installed.</string>
    <string name="phone_error">Device does not support calling.</string>
    <string name="please_wait">Please wait …</string>
    <string name="appversion_validation">We are not getting Current Application Version. Please try again.</string>
    <string name="deviceid_validation">We are not getting Device Unique Id. Please try again.</string>
    <string name="support_error">Support information is not present.</string>
    <string name="retry">Try Again</string>
    <string name="reorder">Reorder</string>
    <string name="distance_error_express1">Distance exceeds 30 miles choose Single Delivery option</string>
    <string name="distance_error_express">Distance from the pick-up address and drop-off address should be 30 miles are below.(Minimum - 1 mile)</string>
    <string name="distance_error_single">Distance between the pick-up address and the drop-off address above 70 miles, each mile adds extra charges</string>
    <string name="distance_error_single_box">Distance between the pick-up address and the drop-off address above 70 miles, each mile adds $ .65</string>
    <string name="crop_action_error">Sorry! image is not cropped.</string>
    <string name="gallery_pick_error">Sorry! image is not picked from gallery. Please try again.</string>
    <string name="camera_capture_error">Sorry! image is not captured. Please try again.</string>
    <string name="crop_action_support">Sorry! your device doesn\'t support cropping action.</string>
    <string name="demo_text">Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making    it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney    College in Virginia, looked up one of the more obscure Latin words, consectetur,    from a Lorem Ipsum passage, and going through the cites of the word in classical</string>
    <string name="ok">Ok</string>
    <string name="getting_address">Getting Address...</string>
    <string name="please_enter_email">Please enter your email.</string>
    <string name="please_enter_valid_email">Please enter valid email or phone number.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="please_enter_current_password">Please enter your current password.</string>
    <string name="please_enter_new_password">Please enter your new password.</string>
    <string name="please_confirm_password">Please confirm the password.</string>
    <string name="please_enter_valid_password">Password should be between 6-20 characters.</string>
    <string name="please_enter_confirm_password">Please enter your confirm password.</string>
    <string name="please_enter_valid_confirm_password">Please enter valid confirm password.</string>
    <string name="plz_accept_terms_">Please accept the terms and conditions.</string>
    <string name="your_confirm_pass_doesnot">Your password and confirm password does not match.</string>
    <string name="validation_title">Whoops!</string>
    <string name="please_enter_first_name">Please enter your name.</string>
    <string name="please_enter_name_or_company">Please enter the Name / company name.</string>
    <string name="please_enter_last_name">Please enter your last name.</string>
    <string name="please_enter_mobile_number">Please enter contact number.</string>
    <string name="please_edit_the_profile">Do you want to edit the profile?</string>
    <string name="please_enter_vaild_number">Please enter vaild number.</string>
    <string name="please_enter_landline_number">Please enter landline number.</string>
    <string name="please_enter_address">Please enter address.</string>
    <string name="please_enter_valid_mobile_number">Mobile number is not valid.</string>
    <string name="please_enter_county_code">Please enter country code.</string>
    <string name="please_enter_valid_county_code">Please enter valid country code.</string>
    <string name="Whoops">Whoops!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="please_select_drop_address">Please select drop-off address.</string>
    <string name="please_select_pick_address">Please select pickup address.</string>
    <string name="please_enter_item_desc">Please enter item description.</string>
    <string name="please_enter_item_quantity">Please enter item quantity.</string>
    <string name="please_select_deli_date">Please select delivery date.</string>
    <string name="please_select_pickup_lifegate_date">Please select Life Gate.</string>
    <string name="please_select_pallets">Please select Pallet or Non-pallets.</string>
    <string name="please_select_deli_time">Please select delivery time.</string>
    <string name="please_select_pickup_date_time">Please select pickup date &amp; pickup time.</string>
    <string name="please_select_pickup_date">Please select pickup date.</string>
    <string name="please_enter_class_good">Please enter class of good.</string>
    <string name="please_enter_type_good">Please enter type of good.</string>
    <string name="please_select_type_pallet">Please select type of pallet.</string>
    <string name="please_select_type_parcel">Please select type of parcel.</string>
    <string name="please_enter_no_of_pallets">Please enter the number.</string>
    <string name="please_Select_type_of_box">Please select type of box.</string>
    <string name="please_enter_the_special">Please enter the special Instructions.</string>
    <string name="please_select_dropoff_lifegate_date">Please select Life Gate.</string>
    <string name="please_enter_parcel_height">Please enter parcel height.</string>
    <string name="please_enter_parcel_weight">Please enter parcel weight.</string>
    <string name="please_enter_parcel_weight_25">Maximum weight 30 pounds</string>
    <string name="please_enter_parcel_weight_11">Weight should be max 13.6078 kg.</string>
    <string name="please_enter_parcel_width">Please enter parcel width.</string>
    <string name="please_enter_parcel_length">Please enter parcel length.</string>
    <string name="please_enter_unit_no">Please enter unit number.</string>
    <string name="please_enter_house_no">Please enter house number.</string>
    <string name="please_enter_street_name">Please enter street name.</string>
    <string name="please_enter_street_number">Please enter street number.</string>
    <string name="please_enter_city_name">Please enter city.</string>
    <string name="please_enter_state_name">Please enter state.</string>
    <string name="please_enter_postcode">Please enter postcode.</string>
    <string name="please_enter_country_name">Please enter country.</string>
    <string name="please_select_vehicle">Please select vehicle.</string>
    <string name="please_select_dob">Please select date of birth.</string>
    <string name="please_select_gst">Please select GST.</string>
    <string name="please_enter_gst_no">Please enter GST number.</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number.</string>
    <string name="please_enter_vehicle_reg_number">Please enter vehicle registration number.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout_text">Are you sure to logout from app?</string>
    <string name="exit_text">Are you sure to exit from app?</string>
    <string name="cancel_order_text">Are you sure, you want to cancel this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_record">No Record</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_email">User Id</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="personalinfo_txt">Personal Info</string>
    <string name="picupaddress_txt">Pickup address</string>
    <string name="item_detail_txt">Item detail</string>
    <string name="next_txt">NEXT</string>
    <string name="comapy_txt">Company Name</string>
    <string name="firstname_txt">Name / Company </string>
    <string name="lastname_txt">Last Name</string>
    <string name="mob_no_txt">Mobile Number</string>
    <string name="change_password">Change Password</string>
    <string name="unit_txt">Unit Number</string>
    <string name="house_txt">House Number</string>
    <string name="subrub_txt">City</string>
    <string name="country_txt">Country</string>
    <string name="pickup_txt">Pick up Address</string>
    <string name="special_ins_txt">Special Instructions...</string>
    <string name="item_des_txt">Item Description</string>
    <string name="item_qua_txt">Item Quantity</string>
    <string name="delivery_date_qua_txt">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_order">Delivery Order</string>
</resources>