<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgo">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/activity_margin_medium"
                android:layout_marginEnd="@dimen/activity_margin_medium">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:src="@drawable/loginlogo"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_margin_medium"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/white_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textSize="@dimen/text_size_extra_normal"
                        android:text="@string/personalinfo_txt"
                        android:textColor="@color/white_color" />

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:background="@color/white_color" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_company"
                    style="@style/edit_text_login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:autofillHints="@string/comapy_txt"
                    android:hint="@string/comapy_txt"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_first_name"
                        style="@style/edit_text_login_style"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_normal_"
                        android:autofillHints="@string/firstname_txt"
                        android:hint="@string/firstname_txt"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />

                    <EditText
                        android:id="@+id/et_last_name"
                        style="@style/edit_text_login_style"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/activity_margin_normal_"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_normal_"
                        android:autofillHints="@string/lastname_txt"
                        android:hint="@string/lastname_txt"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_margin_normal_"
                    android:orientation="horizontal">

                    <com.rilixtech.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:layout_weight="3.5"
                        android:layout_height="match_parent"
                        app:ccp_defaultCode="91"
                        android:gravity="center"
                        app:ccp_hideNameCode="true"
                        app:ccp_defaultNameCode="IN"
                        app:ccp_enablePhoneAutoFormatter="true"
                        app:ccp_textSize="@dimen/text_size_extra_normal"
                        android:background="@drawable/edit_profile_rect"
                        android:textSize="@dimen/text_size_extra_normal"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:id="@+id/et_mobile"
                        style="@style/edit_text_login_style"
                        android:layout_width="0dp"
                        android:layout_weight="6.5"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/mob_no_txt"
                        android:hint="@string/mob_no_txt"
                        android:layout_marginStart="@dimen/activity_margin_normal"
                        android:maxLength="10"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/white_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textSize="@dimen/text_size_extra_normal"
                        android:text="@string/picupaddress_txt"
                        android:textColor="@color/white_color" />

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:background="@color/white_color" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_pickup_address"
                    style="@style/edit_text_login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:autofillHints="@string/unit_txt"
                    android:hint="@string/pickup_txt"
                    android:visibility="visible"
                    android:imeOptions="actionNext"
                    android:inputType="text|textMultiLine"
                    android:lines="2"
                    android:gravity="start"
                    android:ellipsize="end"
                    android:focusable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/white_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textSize="@dimen/text_size_extra_normal"
                        android:text="@string/item_detail_txt"
                        android:textColor="@color/white_color" />

                    <View
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:background="@color/white_color" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_item_description"
                    style="@style/edit_text_login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:autofillHints="@string/house_txt"
                    android:hint="@string/item_des_txt"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences" />



                <EditText
                    android:id="@+id/et_item_quantity"
                    style="@style/edit_text_login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:autofillHints="@string/subrub_txt"
                    android:hint="@string/item_qua_txt"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_delivery_date"
                        style="@style/edit_text_login_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_normal_"
                        android:autofillHints="@string/country_txt"
                        android:hint="@string/delivery_date_qua_txt"
                        android:imeOptions="actionNext"
                        android:layout_weight="1"
                        android:inputType="date"
                        android:focusable="false"/>

                    <EditText
                        android:id="@+id/et_delivery_time"
                        style="@style/edit_text_login_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/activity_margin_normal_"
                        android:autofillHints="@string/country_txt"
                        android:hint="@string/delivery_time"
                        android:imeOptions="actionNext"
                        android:layout_marginLeft="@dimen/activity_margin_normal"
                        android:inputType="datetime"
                        android:focusable="false"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/et_pick_special_inst"
                    style="@style/edit_text_login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin_normal_"
                    android:autofillHints="@string/unit_txt"
                    android:hint="@string/special_ins_txt"
                    android:visibility="visible"
                    android:imeOptions="actionNext"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:lines="3"
                    android:gravity="start" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_medium"
                    android:text="@string/next_txt"
                    android:minHeight="0dp"
                    android:textStyle="bold"
                    android:background="@drawable/button_shape"
                    android:textColor="@color/white_color"
                    android:layout_marginTop="@dimen/text_margin_xlarge"
                    android:fontFamily="@font/titillium_regular"
                    android:textSize="@dimen/text_size_extra_normal"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_btn"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/activity_margin_medium"/>


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_regular"
                    android:text="@string/delivery_order"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_extra_normal" />

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/activity_margin_medium"/>
            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>